src/test/ui/lifetime-errors/ex1-return-one-existing-name-self-is-anon.stderr
error[E0623]: lifetime mismatch
  --> $DIR/ex1-return-one-existing-name-self-is-anon.rs:18:30
   |
16 |     fn foo<'a>(&self, x: &'a Foo) -> &'a Foo {
   |                -----                 -------
   |                |
   |                this parameter and the return type are declared with different lifetimes...
17 | 
18 |         if true { x } else { self } //~ ERROR lifetime mismatch
   |                              ^^^^ ...but data from `self` is returned here

error: aborting due to previous error

